Bug 292501 - Dolphin regression when breadcrumb is use.
Summary: Dolphin regression when breadcrumb is use.
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: general (other bugs)
Version First Reported In: 16.12.2
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-26 19:35 UTC by Anthony Renoux
Modified: 2012-01-28 10:05 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments
doplhin bug when use breadcrumb (49.88 KB, image/png)
2012-01-26 19:37 UTC, Anthony Renoux
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Anthony Renoux 2012-01-26 19:35:44 UTC
Version:           unspecified (using Devel) 
OS:                Linux

KDE 4.8
Now when you use breadcrumb to copy file, if cursor move over a folder, sometime the folder stay select.

Reproducible: Always

Steps to Reproduce:
Ex : copy file test3.txt to breacrumb home :
select the file test3.txt, move cursor to home breadcrumb, so cursor move hover folder test and when the cursor is on home breadcr, the folder stay select.


Actual Results:  
So, if like me, you use "open folders during drag operations" folder test is open.

Expected Results:  
With 4.7, when you select a file, move the cursor over a folder to go breadcrumb, folder is unselect.
Comment 1 Anthony Renoux 2012-01-26 19:37:45 UTC
Created attachment 68204 [details]
doplhin bug when use breadcrumb
Comment 2 Peter Penz 2012-01-26 21:25:50 UTC
Thanks for the report, I could reproduce the issue.

(internal note: the hover selection is not cleared when the mouse leaves the area during dragging - it is not related to the breadcrumb)
Comment 3 Peter Penz 2012-01-28 10:04:45 UTC
Git commit bc80a99ffa5a658ba1d7be00c681f5394e365790 by Peter Penz.
Committed on 28/01/2012 at 11:03.
Pushed by ppenz into branch 'KDE/4.8'.

Assure to mark an item as unhovered on a drag-leave event
FIXED-IN: 4.8.1

M  +6    -0    dolphin/src/kitemviews/kitemlistcontroller.cpp

http://commits.kde.org/kde-baseapps/bc80a99ffa5a658ba1d7be00c681f5394e365790
Comment 4 Peter Penz 2012-01-28 10:05:06 UTC
Git commit 13cebc457c5a149aabcc09bdcda3130a085a5fbd by Peter Penz.
Committed on 28/01/2012 at 11:03.
Pushed by ppenz into branch 'master'.

Assure to mark an item as unhovered on a drag-leave event
FIXED-IN: 4.8.1

M  +6    -0    dolphin/src/kitemviews/kitemlistcontroller.cpp

http://commits.kde.org/kde-baseapps/13cebc457c5a149aabcc09bdcda3130a085a5fbd