Assure to mark an item as unhovered on a drag-leave event

BUG: 292501
FIXED-IN: 4.8.1